# starr

./: .gitignore  README.md
R/starpackage/: .gitignore  DESCRIPTION  LICENSE  LICENSE.md  configure
R/starpackage/R/: compile_code.R  run_code.R  zzz.R
R/starpackage/man/: compile_code.Rd  run_code.Rd
R/testpackage/: DESCRIPTION  NAMESPACE  configure
R/testpackage/R/: compile_code.R  run_code.R  zzz.R
src/: CMakeLists.txt  dataparse.R  main.cpp  matern.h
src/R/: script.R
src/ar_model/: ar_class.cpp  ar_class.h
src/calc_posterior/: posterior.cpp  posterior.h
src/coordinates/: coordinates.cpp  coordinates.h
src/debug_functions/: debug.h
src/proto/: CMakeLists.txt  paramdata.proto  parsedata.proto  xdata.proto  ydata.proto
src/protocpp/: serialize.cpp  serialize.h
